[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Math and Logic games"
authors = ["Oleg14U  <hohleghek@yandex.ru>"]
readme = "README.md"
packages = [{ include ="brain_games" }]
repository = "https://github.com/Oleg14U/python-project-49/"

[tool.poetry.dependencies]
python = "^3.8.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
